# etw-mcp

./: ARCHITECTURE.md  ASSUMPTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING-STARTED.md  README.md  evidence-mcp-poc-plan.md  native-vs-xperf-parity-review.md  parallel-spike-execution-plan.md  pyproject.toml  rust-hybrid-migration-plan-review-2.md  rust-hybrid-migration-plan-review.md  rust-hybrid-migration-plan.md
.github/workflows/: release.yml  test.yml
csharp/: README.md
csharp/docs/: event-class-mapping.md
csharp/scripts/: smoke-test.ps1
csharp/src/: EventCollector.cs  EventStoreEmitter.cs  ExtractRunner.cs  ManifestEmitter.cs  ParquetEmitter.cs  Program.cs  Request.cs  Rows.cs
docs/decisions/: README.md  evidence-language-review.md  rust-vs-csharp-spike-review.md
dotnet/: .gitignore  README.md  etw-extract.csproj  wpr-mcp-extract.csproj
dotnet/docs/: event-class-mapping.md  signing.md
dotnet/scripts/: smoke-test.ps1
dotnet/src/: EventCollector.cs  EventStoreEmitter.cs  ExtractRunner.cs  JsonlEmitter.cs  ManifestEmitter.cs  ParquetEmitter.cs  Program.cs  Request.cs  RowBuffer.cs  Rows.cs  StreamingChunkSink.cs  SysconfigCollector.cs
scripts/: collect_fixture_etl.ps1  fixture_oracle.py
src/etw_analyzer/: __init__.py  app.py  evidence_integration.py  load_jobs.py  networking.py  server.py  trace_state.py
src/etw_analyzer/native/: CSHARP_PARITY_SMOKE.md  DOTNET_PARITY_SMOKE.md  SIDECAR.md  __init__.py  accessors.py  aggregation_worker.py  aggregation_worker_adapters.py  cache.py  config.py  consumer.py  decoder.py  env_compat.py  event_store.py  extract.py  manifest.py  schemas.py  sidecar_bootstrap.py  sinks.py  symbolizer.py  telemetry.py  worker.py  worker_supervisor.py
src/etw_analyzer/native/aggregators/: __init__.py  diskio.py  dpcisr.py  network.py  process_info.py  profile_detail.py  profile_util.py  stack_butterfly.py  streaming.py  sysconfig.py  tracestats.py
src/etw_analyzer/native/bindings/: __init__.py  advapi32.py  dbghelp.py  tdh.py  types.py
src/etw_analyzer/native/mof/: __init__.py  diskio.py  eventtrace.py  fileio.py  imageid.py  imageload.py  perfinfo.py  process.py  stackwalk.py  sysconfig.py  thread.py
src/etw_analyzer/parsing/: mof_cswitch.py  packet_decode.py  wait_chain.py  wpa_exporter.py
src/etw_analyzer/profiles/: __init__.py  cpu.wprp  cpu_dpc_isr.wprp  ebpf.wprp  general.wprp  metadata.py  network.wprp  network_minimal.wprp  network_packets.wprp  quic.wprp  xdp_cpumap.wprp
src/etw_analyzer/tools/: _symbol_annotation.py  app_layer.py  capture_profiles.py  compare.py  context_switch.py  cpu_sampling.py  dpc_isr.py  evidence.py  memory.py  network_dispatch.py  network_events.py  network_events_extra.py  network_lenses.py  network_wait_chain.py  packet_capture.py  per_cpu.py  stack_analysis.py  summary.py  symbol_diagnostics.py  system_info.py  thread_cpu_precise.py  trace_mgmt.py
tests/: conftest.py  manual_evidence_smoke.md  test_app_layer.py  test_capture_profiles.py  test_check_symbols.py  test_cross_tool_identity.py  test_datapath_stacks_cswitch.py  test_dpc_isr_tools.py  test_env_compat.py  test_evidence_integration.py  test_extra_symbol_paths.py  test_fixture_generation.py  test_fixture_golden.py  test_fixture_oracle.py  test_function_resolution_deferred.py  test_image_dcend_native.py  test_image_schema_m2.py  test_integration_real_etl.py  test_mof_cswitch.py  test_native_consumer.py  test_native_persistence.py  test_network_dispatch.py  test_network_events.py  test_network_events_extra.py  test_network_lenses.py  test_packet_capture.py  test_packet_decode.py  test_parsers.py  test_scheduler_event_store_tools.py  test_sidecar_bootstrap.py  test_sidecar_readythread_integration.py  test_stack_analysis_tools.py  test_summary_export_filter.py  test_symbol_annotation.py  test_symbol_diagnostics.py  test_symbolizer_cache_rebuild.py  test_symbols_regression.py  test_system_info_summary.py  test_thread_cpu_precise.py  test_trace_mgmt_async_load.py  (+8 more)
tests/fixtures/: README.md
tests/manual/: _smoke_csharp.py  _smoke_dotnet.py  test_csharp_e2e_smoke.md  test_dotnet_e2e_smoke.md
tests/native/: test_accessors.py  test_aggregation_worker.py  test_cache.py  test_config.py  test_cross_producer_cache.py  test_csharp_native_parity.py  test_csharp_parity.py  test_csharp_parity_phase_b.py  test_csharp_worker_supervisor.py  test_dbghelp_msfz.py  test_dotnet_native_parity.py  test_dotnet_parity.py  test_dotnet_parity_phase_b.py  test_dotnet_worker_supervisor.py  test_event_store.py  test_extract_timestamps.py  test_load_telemetry.py  test_manifest_dispatch.py  test_mof_diskio_fileio.py  test_mof_dispatch.py  test_mof_eventtrace.py  test_mof_imageid.py  test_mof_imageload.py  test_mof_perfinfo.py  test_mof_process.py  test_mof_stackwalk.py  test_mof_thread.py  test_schemas.py  test_sidecar_rsds_pid_mismatch.py  test_streaming_extract.py  test_symbolizer.py  test_symbolizer_identity.py  test_tdh_decoder.py  test_trace_info_export_errors.py  test_worker_supervisor.py
tests/native/aggregators/: test_dpcisr.py  test_network_enrichment.py  test_profile_detail.py  test_profile_util.py  test_stack_butterfly.py  test_streaming.py  test_text_aggregators.py
