[project]
name = "wpr-mcp-server"
version = "0.1.0"
description = "MCP server for analyzing Windows WPR/ETW traces — CPU sampling, DPC/ISR, per-CPU utilization, lock contention"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nithin Jose", email = "nijos@microsoft.com"},
]
keywords = ["mcp", "etw", "wpr", "windows", "performance", "tracing", "xperf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

# Evidence-store federation (POC, gated). Production users running plain
# ``uv sync`` get zero new behavior. Opt in with
# ``uv sync --extra evidence`` AND ``WPR_MCP_EVIDENCE_PATH=<dir>``.
# See ``evidence-mcp-poc-plan.md`` §1.1 G3 for the load-bearing guarantees.
[project.optional-dependencies]
evidence = ["evidence-store"]

[tool.uv.sources]
# Local path for the POC; replace with PyPI / git URL once published.
evidence-store = { path = "../evidence-store", editable = true }

[project.urls]
Homepage = "https://github.com/nijosmsft/wpr-mcp-server"
Repository = "https://github.com/nijosmsft/wpr-mcp-server"
Issues = "https://github.com/nijosmsft/wpr-mcp-server/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etw_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load multi-100MB traces (~60s+). Run with: pytest -m slow",
    "fixture: tests that require optional ETL fixtures. Run with: pytest --run-fixture",
    "golden: tests that compare stable golden trace invariants. Run with: pytest --run-golden",
    "xperf: tests that require xperf.exe. Run with: pytest --run-xperf",
    "admin: tests that require administrator privileges. Run with: pytest --run-admin",
    "network: tests that require network access. Run with: pytest --run-network",
    "benchmark: tests that measure performance. Run with: pytest --run-benchmark",
    "live: tests that attach to live systems or processes. Run with: pytest --run-live",
    "parity: dotnet-vs-native cross-producer parity tests. Run with: pytest --run-parity",
]
