[project]
name = "etw-mcp"
version = "0.8.2"
description = "MCP server for analyzing Windows ETW (.etl) traces — xperf / native ETW / .NET sidecar + WPR & pktmon capture authoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nithin Jose", email = "nijos@microsoft.com"},
]
keywords = ["mcp", "etw", "wpr", "pktmon", "windows", "performance", "tracing", "xperf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

# Evidence-store federation is OFF by default and not installed as a default
# dep. The integration in src/etw_analyzer/evidence_integration.py is
# guarded by ``try/except ImportError`` AND the ``ETW_MCP_EVIDENCE_PATH``
# env var (legacy ``WPR_MCP_EVIDENCE_PATH`` still honored via env_compat),
# so an unchanged-env install behaves identically to a v0.1.x install.
#
# To enable evidence federation (POC):
#
#   1. Install the evidence-store library from its repo. It is not on PyPI:
#
#         uv pip install git+https://github.com/nijosmsft/evidence-store
#
#      or, for a local checkout:
#
#         uv pip install -e ../evidence-store
#
#   2. Set the env var:
#
#         $env:ETW_MCP_EVIDENCE_PATH = "C:\evidence"
#
# Once both are in place, ``load_trace`` will register entities into the
# per-machine DuckDB under ``$ETW_MCP_EVIDENCE_PATH``.
#
# The optional extras-dep entry was removed in v0.2.0 because the
# evidence-store repo is currently private; uv cannot resolve an
# unauthenticated reference at lockfile-generation time. Once
# evidence-store is published (PyPI or public git URL), the
# ``[project.optional-dependencies] evidence = [...]`` group + a
# ``[tool.uv.sources]`` override will be restored.

[project.urls]
Homepage = "https://github.com/nijosmsft/etw-mcp"
Repository = "https://github.com/nijosmsft/etw-mcp"
Issues = "https://github.com/nijosmsft/etw-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etw_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load multi-100MB traces (~60s+). Run with: pytest -m slow",
    "fixture: tests that require optional ETL fixtures. Run with: pytest --run-fixture",
    "golden: tests that compare stable golden trace invariants. Run with: pytest --run-golden",
    "xperf: tests that require xperf.exe. Run with: pytest --run-xperf",
    "admin: tests that require administrator privileges. Run with: pytest --run-admin",
    "network: tests that require network access. Run with: pytest --run-network",
    "benchmark: tests that measure performance. Run with: pytest --run-benchmark",
    "live: tests that attach to live systems or processes. Run with: pytest --run-live",
    "parity: dotnet-vs-native cross-producer parity tests. Run with: pytest --run-parity",
]
